@@ -1,8 +1,10 @@
 package org.kriukov.springsecurity.security;
 
 
+import org.kriukov.springsecurity.model.UserDto;
 import org.kriukov.springsecurity.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -10,6 +12,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
@@ -19,8 +22,8 @@ public class UserDetailsServiceImpl implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        org.kriukov.springsecurity.model.User user = userService.getByUsername(username);
+        UserDto user = userService.getByUsername(username);
 
-        return new User(user.getUsername(), user.getPassword(), Collections.emptyList());
+        return new User(user.getUsername(), user.getPassword(), List.of(new SimpleGrantedAuthority("ADMIN")));
     }
 }
